<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        style="@style/Toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginTop="45dp">
        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/sign_up_reenter_password"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/sign_up_tips1"
        android:textSize="17sp"
        android:textColor="@color/primaryText"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/sign_up_reenter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_password"
            android:hint="@string/reenter_password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/sign_up_tips"
            />
        <EditText
            android:id="@+id/sign_up_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_tips"
            android:hint="@string/tips"
            android:inputType="text"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/sign_up_tips2"
        android:textSize="17sp"
        android:textColor="@color/primaryText"/>

</LinearLayout>
